--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/notifications
+spring.datasource.username=test
+spring.datasource.password=test
+spring.jpa.hibernate.ddl-auto=validate
 
+spring.liquibase.url=jdbc:postgresql://localhost:5432/notifications
+spring.liquibase.user=test
+spring.liquibase.password=test
+
+telegram.bot.token=5803049757:AAGavnBR0_nM_jZ8oPWs6KiYushn12KfZsU
